<resources>
    <string name="app_name">TicTacToe</string>
    <string name="welcome_to_tic_tac_toe_text_view">Welcome to Tic Tac Toe</string>
    <string name="player_x_image">player_x_image</string>
    <string name="player_o_image">player_o_image</string>
    <string name="tic_tac_toe_game_winner">Game Winner</string>
    <string name="tic_tac_toe_game_result">Game Result:</string>
    <string name="play_again_btn">Play Again?</string>
    <string name="player_x_won">X wins</string>
    <string name="player_o_won">O wins</string>
    <string name="tic_tac_toe_game_drawn">Game Drawn</string>
    <string name="tic_tac_toe_splash_screen_icon">Tic Tac Toe Splash Icon</string>
</resources>